add more rel ext

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -434,24 +434,34 @@ In December DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }
 { Story ideas I noted for November but did not have time for (bee): 
 
 - Since we had a few bugs with Taproot, it means it is getting traction on Bitcoin. Explain what it is on a high level and where it is at.
-- Big sell offs from BTC miners in Nov.
-- Remind how much is owned by DCG (https://dcg.co/portfolio/) w.r.t contagion risks
-- How regulators are abusing the FTX collapse to push for even more control while failing to quickly start due legal process against FTX.
+
+  How regulators are abusing the FTX collapse to push for even more control while failing to quickly start due legal process against FTX.
+
 - USDT circulation huge drop first time in history.
+
 - CDBCs are the real danger while everybody is talking about FTX. Surprising coordination among many countries to launch in Spring 2023, including the digital dollar.
+
 - https://www.investing.com/news/cryptocurrency-news/cbdc-is-a-tool-to-combat-bitcoin-says-bank-of-indonesia-exec-2694335
+
 - U.S. savings reduced - if any notable unusual statistics in there.
+
 - ConsenSys tracking MetaMask wallets.
+
 - USDC tx may be more expensive to process due to resources on blacklists https://odysee.com/@DigitalCashNetwork:c/USDCYTS:f
+
 - Crypto official means of payment in Brazil?
+
 - Sia grants, ideally some Dec news https://medium.com/sia-tech/grants-program-update-november-2022-83dd4a7e266e
+
 - A41 governance something, ideally some Dec news https://medium.com/a41-ventures/governance-memo-osmosis-november-week-4-2022-5b5720b77c4c
 
 In November, plans to outlaw privacy-enhancing crypto coins in the EU were [leaked](https://www.coindesk.com/policy/2022/11/15/privacy-enhancing-crypto-coins-could-be-banned-under-leaked-eu-plans/). The plans were put forward by the Czech officials who are currently chairing talks. Crypto-asset service providers and other institutions would be banned from holding or touching privacy-enhancing cryptocurrency under the proposal.
 
-The Grayscale Bitcoin Trust has been [puzzling](https://seekingalpha.com/article/4563283-grayscale-bitcoin-trust-rating-upgrade) and spooking some investors, as its "discount to NAV" (price of a share of the trust vs the value of the amount of Bitcoin one share represents) [increased](https://ycharts.com/companies/GBTC/discount_or_premium_to_nav) to a whopping 45%. In Summer 2022 Grayscale's application to convert the fund to an ETF was denied, so it is presently stuck in a position where investors cannot claim the BTC their shares entitle them to, although this decision is under appeal. Grayscale is owned by the Digital Currency Group, which also owns [troubled](https://www.forbes.com/sites/dereksaul/2023/01/05/crypto-broker-genesis-cuts-30-of-staff-reportedly-mulls-bankruptcy/) crypto lender Genesis, which had to suspend its operations in the wake of FTX's collapse, and in January cut 30% of its workforce.
+ConsenSys faced a [backlash](https://www.coindesk.com/tech/2022/11/24/ethereum-software-firm-consensys-reveals-it-collects-user-data/) over an update to its privacy policy in November, with users objecting to the collection of IP address information through RPC provider Infura and linking this to addresses and account balances. A [response](https://uk.finance.yahoo.com/news/consensys-metamask-crypto-wallet-response-130000872.html) from ConsenSys in December clarified that they only collect data for "write" events (like making a transaction) and not when the user merely checks their balances, and that they have been doing this since 2018. They pledged to no longer store the IP data alongside the account access data, and to make it easier for users to change RPC provider through the interface.
 
-https://bitcoinmagazine.com/legal/bitcoin-miner-core-scientific-bankruptcy
+The Grayscale Bitcoin Trust has been [puzzling](https://seekingalpha.com/article/4563283-grayscale-bitcoin-trust-rating-upgrade) and spooking some investors, as its "discount to NAV" (price of a share of the trust vs the value of the amount of Bitcoin one share represents) [increased](https://ycharts.com/companies/GBTC/discount_or_premium_to_nav) to a whopping 45%. In Summer 2022 Grayscale's application to convert the fund to an ETF was denied, so it is presently stuck in a position where investors cannot claim the BTC their shares entitle them to, although this decision is under appeal. Grayscale is owned by the Digital Currency Group, which also owns [troubled](https://www.forbes.com/sites/dereksaul/2023/01/05/crypto-broker-genesis-cuts-30-of-staff-reportedly-mulls-bankruptcy/) crypto lender Genesis, which had to suspend its operations in the wake of FTX's collapse, and in January cut 30% of its workforce. The Digital Currency Group owns many [companies](https://dcg.co/portfolio/) in the crypto space, and there has been some speculation about which of these they might sell to bail out the struggling ones. Their holdings include Coindesk, which broke the story about FTX which triggered the present difficulties for DCG. The cryptocurrency holdings of DCG have been the subject of some controversy, as Grayscale's [refusal](https://cryptopotato.com/grayscale-says-no-to-proof-of-reserves/) to participate in providing "Proof of Reserves" was one of the factors which caused suspicion initially - although Coinbase has stepped up to [vouch](https://www.cryptopolitan.com/coinbase-clears-about-grayscale-reserves) for their assets being safely held.
+
+It has been a [tough year](https://www.forbes.com/sites/colinharper/2022/12/23/bitcoin-mining-in-2022-the-year-boom-turned-to-bust/) for Bitcoin miners, and in particular the Northern American industry which grew rapidly fuelled by cheap credit in 2021 and lured in by the gap left when China banned PoW mining. As the price of BTC declined by 63% in 2022 the industry was becoming more competitive, leading to a 70% drop in mining profitability. As the problems became clear the value of top mining machines declined 85% and the value of shares for the mining companies fell from between 80-98%. In December Core Scientific, one of the largest US crypto miners, has [filed](https://bitcoinmagazine.com/legal/bitcoin-miner-core-scientific-bankruptcy) for bankruptcy.
 
 Avraham Eisenberg, the front man who took public credit for the "highly profitable trading strategy" which drained Mango Markets of $110 million, has ben [arrested](https://decrypt.co/118045/mango-markets-attacker-avraham-eisenberg-arrested-charged-with-market-manipulation-offenses) and charged with market manipulation offences.
 
