--- a/journal/202212.md
+++ b/journal/202212.md
@@ -250,17 +250,15 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In December the new [treasury](https://dcrdata.decred.org/treasury) received 8,712 DCR worth ${} at December's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at December's rate, or ${} at November's billing rate of $21.92.
+In December the new [treasury](https://dcrdata.decred.org/treasury) received 8,712 DCR worth $172K at December's average rate of $19.79. 3,907 DCR was spent to pay contractors (but the transaction was not approved/mined until January 3), worth $77K at December's rate, or $86K at November's billing rate of $21.92.
 
-The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
+The [treasury spend tx](https://explorer.dcrdata.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b) had 24 outputs making payments to contractors, ranging from 5 DCR to 1,270 DCR.
 
 { _Other interesting facts/stories about the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Jan 7, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 834,055 DCR (15.6 million USD at $18.70).
 
-{ _High-level recap of decision-making activity and most important events._ }
-
-- {}
+There were no new proposals published on Politeia in December.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
