--- a/journal/202212.md
+++ b/journal/202212.md
@@ -98,7 +98,11 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-- {}
+- Updated [DCRDEX module](https://github.com/decred/decrediton/pull/3840) from v0.5.6 to v0.5.7 (fixes for order cancellation).
+- Introduced voting for [individual TSpends](https://github.com/decred/decrediton/pull/3787). If any tickets are managed by VSPs, changing ticket vote preferences will be sent to the VSPs. If new unvoted TSpends are detected, a notification will be shown on the home page. Voting policies for treasury keys and individual TSpends will be shown on ticket details page.
+- Expanded automated UI test coverage.
+
+{ image candidates: 3787 }
 
 
 ### Politeia
