--- a/journal/202212.md
+++ b/journal/202212.md
@@ -98,7 +98,7 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-- Updated [DCRDEX module](https://github.com/decred/decrediton/pull/3840) from v0.5.6 to v0.5.7 (fixes for order cancellation).
+- Updated DCRDEX module to v0.5.7 which fixes several edge cases around [order cancellation](https://github.com/decred/decrediton/pull/3840).
 - Introduced voting for [individual TSpends](https://github.com/decred/decrediton/pull/3787). If any tickets are managed by VSPs, changing ticket vote preferences will be sent to the VSPs. If new unvoted TSpends are detected, a notification will be shown on the home page. Voting policies for treasury keys and individual TSpends will be shown on ticket details page.
 - Expanded automated UI test coverage.
 
@@ -117,7 +117,8 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 }
 
-- {}
+- Build and test pi-ui against [Node 18 and 19](https://github.com/decred/pi-ui/pull/468)
+- Test fixes.
 
 
 ### vspd
