--- a/journal/202212.md
+++ b/journal/202212.md
@@ -174,7 +174,6 @@ Other client changes:
 Other:
 
 - Updated [build config](https://github.com/decred/dcrdex/pull/1979). { _minor_ }
-- Smaller fixes { 1995 }
 
 
 ### dcrdata
@@ -183,7 +182,14 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check_ https://github.com/decred/dcrdata/commits/master }
 
-- {}
+- Removed some [dcrwallet imports](https://github.com/decred/dcrdata/pull/1887) to simplify updates to new dcrd modules.
+- [Treasury voting](https://github.com/decred/dcrdata/pull/1918) rules and progress became easier to understand and follow. Treasury spend transaction pages will show how current votes compare to minimum quorum and Yes percentage requirements, approximate calendar dates of start and end of voting, which Politeia key signed the TSpend, and more. An example recent TSpend can be seen [here](https://tip.dcrdata.org/tx/49f141f51421a499d319bc617a4430f87db3a73ffa605dee8408eefb081bd11b).
+- Removed the requirement to run dcrd with address index enabled because it was [removed from dcrd](https://github.com/decred/dcrd/pull/2930). Usage of dcrd's `searchrawtransactions` method (which depends on the address index) was removed in favor of dcrdata's own database that has all the necessary information.
+- Added two fields to the [transaction data API](https://github.com/decred/dcrdata/pull/1946): `tree` (Decred blocks store transactions in regular and stake trees) and `type` (Decred transactions can be `regular`, `ticket`, `vote`, `revocation`, `coinbase`, `treasurybase`, `treasury add`, `treasury spend`).
+- Fixed a rare bug where [disapproved transactions](https://docs.decred.org/governance/overview/#block-voting) that were later included in an approved block had their outputs [incorrectly shown as unspent](https://github.com/decred/dcrdata/pull/1938). Less than 20 transactions were affected in the entire chain history.
+- Smaller fixes { 1995 1935 } and UI tweaks { 1944 1942 1947 }.
+
+{ image candidates: 1918 }
 
 
 ### decred.org
@@ -192,7 +198,7 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 { _Check_ https://github.com/decred/dcrweb/commits/master }
 
-- {}
+- Minor UI fixes { 1941 }
 
 
 ### Bison Relay
