--- a/journal/202212.md
+++ b/journal/202212.md
@@ -174,6 +174,7 @@ Other client changes:
 Other:
 
 - Updated [build config](https://github.com/decred/dcrdex/pull/1979). { _minor_ }
+- Smaller fixes { 1995 }
 
 
 ### dcrdata
@@ -187,18 +188,9 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 - Removed the requirement to run dcrd with address index enabled because it was [removed from dcrd](https://github.com/decred/dcrd/pull/2930). Usage of dcrd's `searchrawtransactions` method (which depends on the address index) was removed in favor of dcrdata's own database that has all the necessary information.
 - Added two fields to the [transaction data API](https://github.com/decred/dcrdata/pull/1946): `tree` (Decred blocks store transactions in regular and stake trees) and `type` (Decred transactions can be `regular`, `ticket`, `vote`, `revocation`, `coinbase`, `treasurybase`, `treasury add`, `treasury spend`).
 - Fixed a rare bug where [disapproved transactions](https://docs.decred.org/governance/overview/#block-voting) that were later included in an approved block had their outputs [incorrectly shown as unspent](https://github.com/decred/dcrdata/pull/1938). Less than 20 transactions were affected in the entire chain history.
-- Smaller fixes { 1995 1935 } and UI tweaks { 1944 1942 1947 }.
+- Smaller fixes { 1941 1935 } and UI tweaks { 1944 1942 1947 }.
 
 { image candidates: 1918 }
-
-
-### decred.org
-
-_[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
-
-{ _Check_ https://github.com/decred/dcrweb/commits/master }
-
-- Minor UI fixes { 1941 }
 
 
 ### Bison Relay
