--- a/journal/202212.md
+++ b/journal/202212.md
@@ -204,6 +204,20 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is the new peer-to-pee
 
 }
 
+Bison Relay is written in Go, Dart and Flutter.
+
+Initial [v0.1.0](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.0) has been released on December 15th with the following features
+
+- { initial release feature highlights }
+
+Changes released in [v0.1.1](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.1) next day:
+
+- Fixed multiple [issues](https://github.com/companyzero/bisonrelay/pull/13) with notifications, layout and number formatting.
+- Fixed user getting [stuck](https://github.com/companyzero/bisonrelay/pull/21) after an unfinished seed setup.
+- Fixed unreadable [server fingerprints](https://github.com/companyzero/bisonrelay/pull/21).
+
+{ link BR educational videos}
+
 
 ### Other
 
