--- a/journal/202212.md
+++ b/journal/202212.md
@@ -14,7 +14,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - 
 
-- 
+- Bison Relay launch and initial onboarding.
 
 - 
 
@@ -42,6 +42,26 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 ## { Some Announcement }
 
 { _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
+
+
+## Bison Relay Launch
+
+Bison Relay is { 1 para summary }
+
+Initial release includes the following software:
+
+- Server
+- Command-line client { ur is it a TUI? or both? }
+- GUI client for { platforms }
+- { any other apps? }
+
+{ initial release feature highlights, what you can do with it }
+
+{ ^ add download links for each + note on sigs missing temporarily }
+
+{ get some onboarding stats }
+
+{ link all blogs and edu vids }
 
 
 ## Development
