--- a/journal/202212.md
+++ b/journal/202212.md
@@ -491,23 +491,28 @@ In December DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }
 
 { _Hint: Find "epic win" stories besides just dramatic "epic fail" stories, in areas relevant to Decred. We can learn from both._ }
 
-{ Story ideas I noted for November but did not have time for (bee): 
+{ _Story ideas I noted for November but did not have time for (bee)_:
 
 - Since we had a few bugs with Taproot, it means it is getting traction on Bitcoin. Explain what it is on a high level and where it is at.
 
-  How regulators are abusing the FTX collapse to push for even more control while failing to quickly start due legal process against FTX.
+- How regulators are abusing the FTX collapse to push for even more control while failing to quickly start due legal process against FTX.
 
 - USDT circulation huge drop first time in history.
 
 - CDBCs are the real danger while everybody is talking about FTX. Surprising coordination among many countries to launch in Spring 2023, including the digital dollar.
 
-- https://www.investing.com/news/cryptocurrency-news/cbdc-is-a-tool-to-combat-bitcoin-says-bank-of-indonesia-exec-2694335
+  - https://www.investing.com/news/cryptocurrency-news/cbdc-is-a-tool-to-combat-bitcoin-says-bank-of-indonesia-exec-2694335
 
 - U.S. savings reduced - if any notable unusual statistics in there.
 
 - USDC tx may be more expensive to process due to resources on blacklists https://odysee.com/@DigitalCashNetwork:c/USDCYTS:f
 
-- A41 governance something, ideally some Dec news https://medium.com/a41-ventures/governance-memo-osmosis-november-week-4-2022-5b5720b77c4c - rr: this is a41 commenting on how it voted on Osmosis proposals - is the idea to cover Osmosis governance? They seem to have quite some churn
+- A41 governance something, ideally some Dec news https://medium.com/a41-ventures/governance-memo-osmosis-november-week-4-2022-5b5720b77c4c
+
+  - rr: this is a41 commenting on how it voted on Osmosis proposals - is the idea to cover Osmosis governance? They seem to have quite some churn
+  - bee: if Osmosis gov has any action that fits our Rel Ext style, sure
+
+}
 
 In November, plans to outlaw privacy-enhancing crypto coins in the EU were [leaked](https://www.coindesk.com/policy/2022/11/15/privacy-enhancing-crypto-coins-could-be-banned-under-leaked-eu-plans/). The plans were put forward by the Czech officials who are currently chairing talks. Crypto-asset service providers and other institutions would be banned from holding or touching privacy-enhancing cryptocurrency under the proposal.
 
@@ -534,8 +539,6 @@ DFINITY Foundation [announced](https://finance.yahoo.com/news/internet-computer-
 The US Federal Reserve is gearing up to [unleash](https://www.federalreserve.gov/paymentsystems/fednow_about.htm) "FedNow" in May-July 2023, a version of the digital dollar for depository institutions which their clients will be able to access and use directly for instant processing and settlement 24/7 hours a day 365 days a year. This is distinct from any retail-facing CBDC, which is so far  not being actively planned in the US but some experiments have taken place.
 
 The Bank of England actively [seeking](https://www.cityam.com/bank-of-england-ramps-up-cbdc-ambitions-after-offering-200000-wallet-contract-to-bidders/) applications from companies to build a prototype mobile wallet app, merchant website and back-end server for the core ledger - and offering a budget of £200,000 for the winning entry.
-
-}
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
 
