Ann BR basic and advanced links

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -67,14 +67,7 @@ Initial release comes with the following features (incomplete list):
 
 { tell how cheap to use it is }
 
-Initial release includes the following software:
-
-- Server
-- Command-line client { ur is it a TUI? or both? }
-- GUI client app or { platforms }
-- { any other apps? }
-
-{ ^ add download links for each + note on sigs missing temporarily }
+Most users will want to download the GUI app [here](https://github.com/companyzero/bisonrelay/releases), get the fille named `bisonrelay-xxx` for your operating system. The downloads have no hashes or signatures yet but those will be added in the [future](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$cSc9OmuvOLz-G4VsDQfSBDUrORHOizZqpQK9w6kHSaM?via=decred.org&via=matrix.org&via=planetdecred.org).
 
 { directions how to join }
 
@@ -86,10 +79,12 @@ Learn how to use BR:
 - [First look and feature overview of v0.1.1](https://www.youtube.com/watch?v=ukRkQC4IXoo)
 - [News feed - connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY)
 
+Advanced users can also check the [command-line `brclient` app](https://github.com/companyzero/bisonrelay/releases), [server source code](https://github.com/companyzero/bisonrelay#server), and [technical docs](https://github.com/companyzero/bisonrelay/tree/master/doc).
+
 To understand the motivation for creating Bison Relay check the posts by @jy-p:
 
 - [Outreach problems Decred faced](https://blog.decred.org/2022/12/02/What-is-wrong-with-Decred/) with existing outlets and social media platforms
-- Inherent [problems with today's web](https://blog.decred.org/2022/12/09/Trapped-in-the-Web/)
+- Inherent [problems with today's Web](https://blog.decred.org/2022/12/09/Trapped-in-the-Web/)
 - Initial [Bison Relay announcement](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/)
 
 > The inference is that Decred should attempt to grow its network without conventional marketing. The path forward is not through, but around.
