--- a/journal/202212.md
+++ b/journal/202212.md
@@ -12,8 +12,6 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- 
-
 - Bison Relay launch and initial onboarding.
 
 - DCRDEX v0.5.8 release with new advanced options to speed up startup and shutdown.
@@ -46,7 +44,7 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## Bison Relay Launch
 
-Bison Relay is a peer to peer social media platform with strong protections against censorship, surveillance and advertising. Messages are end-to-end encrypted to ensure only the intended recipients can see the contents. Server operators cannot see message contents, sender, receiver, or which chats user participates in. Built-in payments allow content monetization via tipping or paid access.
+Bison Relay is a new peer to peer social media platform with strong protections against censorship, surveillance and advertising. Messages are end-to-end encrypted to ensure only the intended recipients can see the contents. There are no accounts and metadata is minimized, so that server operators cannot see message contents, sender, receiver, or which chats user participates in. Built-in payments allow content monetization via paid access to content or tipping.
 
 Initial release comes with the following features (incomplete list):
 
@@ -57,35 +55,37 @@ Initial release comes with the following features (incomplete list):
 - Commenting on posts
 - News feed with content from users you are subscribed to
 - Relaying (reposting) content
-- Connecting with other users via invite files sent over existing channel, or via Bison Relay directly (your existing contacts connect you to their contacts)
+- Connecting with other users via invite files sent over existing channel, or via Bison Relay directly (your existing contacts connect you with their contacts)
   - { do mediated key exchanges work already? }
 - Sending and receiving DCR tips via Decred Lightning Network
-- Sharing files with custom cost per kilobyte that users pay to access { someone please check/expand this, e.g. does the "access cost" go to the server or to the poster? }
-- Payments to the server for sending and receiving messages
+- Sharing files with optional cost that users pay for access
+  - { someone please check/expand this, e.g. does the "access cost" go to the server or to the poster? }
 - Creating and paying invoices
+- Payments to the server for sending and receiving messages
+- GUI and command-line apps for Linux, macOS and Windows
 - { anything else to note here? }
 
-{ tell how cheap to use it is }
+{ estimate how cheap it is to use BR }
 
 Most users will want to download the GUI app [here](https://github.com/companyzero/bisonrelay/releases), get the fille named `bisonrelay-xxx` for your operating system. The downloads have no hashes or signatures yet but those will be added in the [future](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$cSc9OmuvOLz-G4VsDQfSBDUrORHOizZqpQK9w6kHSaM?via=decred.org&via=matrix.org&via=planetdecred.org).
 
-{ directions how to join }
+{ directions how to join or get an invite }
 
 Learn how to use BR:
 
 - Official [Features](https://bisonrelay.org/features/) and [Tutorial](https://bisonrelay.org/tutorial/)
 - [2-min overview in Decred News Update](https://www.youtube.com/watch?v=K6Cu4Gi7Lp0)
-- [Setting up Bison Relay v0.1.1 on macOS](https://www.youtube.com/watch?v=L4jm-VMPmBo) video
+- [Setting up Bison Relay v0.1.1 on macOS](https://www.youtube.com/watch?v=L4jm-VMPmBo)
 - [First look and feature overview of v0.1.1](https://www.youtube.com/watch?v=ukRkQC4IXoo)
 - [News feed - connecting, creating and using markdown](https://www.youtube.com/watch?v=NuKVAp4fIBY)
 
-Advanced users can also check the [command-line `brclient` app](https://github.com/companyzero/bisonrelay/releases), [server source code](https://github.com/companyzero/bisonrelay#server), and [technical docs](https://github.com/companyzero/bisonrelay/tree/master/doc).
+Advanced users can also check the [command-line brclient app](https://github.com/companyzero/bisonrelay/releases), [server source code](https://github.com/companyzero/bisonrelay#server), and [technical docs](https://github.com/companyzero/bisonrelay/tree/master/doc).
 
-To understand the motivation for creating Bison Relay check the posts by @jy-p:
+To understand the motivation to create Bison Relay check the posts by @jy-p:
 
 - [Outreach problems Decred faced](https://blog.decred.org/2022/12/02/What-is-wrong-with-Decred/) with existing outlets and social media platforms
 - Inherent [problems with today's Web](https://blog.decred.org/2022/12/09/Trapped-in-the-Web/)
-- Initial [Bison Relay announcement](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/)
+- Initial [Bison Relay announcement](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) explains the high level design of the system and why it was required to facilitate free speech and free association.
 
 > The inference is that Decred should attempt to grow its network without conventional marketing. The path forward is not through, but around.
 
