--- a/journal/202212.md
+++ b/journal/202212.md
@@ -464,7 +464,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In December DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ five decimals }. The average daily rate was ${n.nn}.
+In December DCR was trading between USDT $18.20-$24.80 and BTC 0.001104-0.001450. The average daily rate was $19.79.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis. Check here:_
 
