--- a/journal/202212.md
+++ b/journal/202212.md
@@ -430,7 +430,12 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- {}
+- [Decred News - Bison Relay P2P Chat + Social Media on Lightning is here! Big Dev updates!](https://youtu.be/K6Cu4Gi7Lp0) by @Exitus
+- [My Chat with Decred Founder/CEO Jake](https://www.youtube.com/watch?v=OS_AOyMdAeU) by @PieceOfThePYShow
+- [Bison Relay - First Look (version 0.1.1)](https://youtu.be/ukRkQC4IXoo) By @PhoenixGreen
+- [Setting up BisonRelay 0.1.1 on macOS](https://youtu.be/L4jm-VMPmBo) by @PhoenixGreen
+- [Decred and the Atomic Swap Revolution - DCRDEX Fundamentals](https://youtu.be/JyBoe1z5h9U) by @PhoenixGreen
+- [2022 the year of the bear - Decred and the state of the market](https://youtu.be/PO2byx7D8z0) feat. @PhoniexGreen @Exitus, and @Tivra.
 
 **Audio:**
 
