add twitter spaces

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -445,7 +445,10 @@ Secured the following news articles:
 
 **Audio:**
 
-- {}
+New Twitter Spaces recordings:
+
+- [Exploring Possibilities of Decentralized Social Media](https://twitter.com/i/spaces/1ypKddnRQZvKW?s=20) - by @Tivra and @kozel.
+- [Bison Relay: The Sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel.
 
 **Art and fun:**
 
