--- a/journal/202212.md
+++ b/journal/202212.md
@@ -286,17 +286,14 @@ Welcome the new first-time contributors:
 
 { _Interviews with contributors. Link the interview and add a fun/strong quote._ }
 
-Community stats as of {date} (compared to {date}):
+Community stats as of Jan 4 (compared to Dec 2):
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-
-{ _Optional: List/link notable SM dynamics._ }
+- [Twitter](https://twitter.com/decredproject) followers: 53,392 (-342)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,648 (+14)
+- [Matrix](https://chat.decred.org/) #general users: 738 (+9)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,530 (-348 - purged inactive users), verified to post: 929 (-7)
+- [Telegram](https://t.me/Decred) users: 2,872 (-22)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,640 (+0), views: 221K (+2K)
 
 
 ## Governance
