--- a/journal/202212.md
+++ b/journal/202212.md
@@ -16,7 +16,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - DCRDEX v0.5.8 release with new advanced options to speed up startup and shutdown.
 
-- 
+- Decred LN node count and capacity increased over Bison Relay launch.
 
 - 
 
@@ -321,29 +321,29 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~67 Ph/s and closed ~68 Ph/s, bottoming at 58 Ph/s and peaking at 91 Ph/s throughout the month.
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jan 1: Poolin 55%, F2Pool 38%, BTC.com 5%, AntPool 2.7%.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Jan 4: Poolin 55%, F2Pool 36%, likely BTC.com 5%, likely AntPool 2.6%, CoinMine 0.4%, unknown 0.9%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}).
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 234-244 DCR, with 30-day [average](https://dcrstats.com/) at 234.8 DCR (+3.3).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.46-9.62 million DCR, meaning that 64.0-64.8% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: The [{} listed VSPs](https://decred.org/vsp/) collectively managed ~{n} (+{n}) live tickets, which was {n.n}% of the ticket pool (+{n.n}%) as of {date}.
+**VSP**: The [17 listed VSPs](https://decred.org/vsp/) collectively managed ~7,120 (+190) live tickets, which was 17.2% of the ticket pool (+0.4%) as of Jan 1. These figures exclude vspd.stakey.com due to [stale API data](https://github.com/decred/dcrwebapi/pull/171).
 
-{ _Optional: mention biggest gainers_ }
+Biggest gainers in December are vspd.bass.cf (+371), big.decred.energy (+179) and vspd.99split.com (+178).
 
-**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed {} dcrd nodes on {date}: v{} - {n}%, ...
+**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 79 dcrd nodes on Jan 1: v1.7.5 - 27%, v1.7.1 - 27%, v1.8.0 dev builds - 23%, v1.7.2 - 11%, v1.7.0 - 6%, v1.7.4 - 2.5%, other - 4%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between {n}-{n}K DCR.
+{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.1-61.4%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 291-479K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node we queried last month reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
 
 { _Add any interesting analysis or events in the network._ }
 
