--- a/journal/202212.md
+++ b/journal/202212.md
@@ -317,23 +317,15 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 ## Network
 
-{ _Hint: "Network" tracks key "health" metrics of the fundamental infrastructure._ }
-
-{ _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
-
 **Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~67 Ph/s and closed ~68 Ph/s, bottoming at 58 Ph/s and peaking at 91 Ph/s throughout the month.
 
 Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jan 1: Poolin 55%, F2Pool 38%, BTC.com 5%, AntPool 2.7%.
-
-{ _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Jan 4: Poolin 55%, F2Pool 36%, likely BTC.com 5%, likely AntPool 2.6%, CoinMine 0.4%, unknown 0.9%.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 234-244 DCR, with 30-day [average](https://dcrstats.com/) at 234.8 DCR (+3.3).
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.46-9.62 million DCR, meaning that 64.0-64.8% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
-
-{ _Add a recap of ticket price action if it was interesting._ }
 
 **VSP**: The [17 listed VSPs](https://decred.org/vsp/) collectively managed ~7,120 (+190) live tickets, which was 17.2% of the ticket pool (+0.4%) as of Jan 1. These figures exclude vspd.stakey.com due to [stale API data](https://github.com/decred/dcrwebapi/pull/171).
 
@@ -343,9 +335,7 @@ Biggest gainers in December are vspd.bass.cf (+371), big.decred.energy (+179) an
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.1-61.4%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 291-479K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node we queried last month reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
-
-{ _Add any interesting analysis or events in the network._ }
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node we queried last month reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
 
 
 ## Ecosystem
