--- a/journal/202212.md
+++ b/journal/202212.md
@@ -319,9 +319,21 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 **Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~67 Ph/s and closed ~68 Ph/s, bottoming at 58 Ph/s and peaking at 91 Ph/s throughout the month.
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Network_Daily_Hashrate.png) { _upload_ }
+
+_Image: Decred hashrate._
+
 Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jan 1: Poolin 55%, F2Pool 38%, BTC.com 5%, AntPool 2.7%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Jan 4: Poolin 55%, F2Pool 36%, likely BTC.com 5%, likely AntPool 2.6%, CoinMine 0.4%, unknown 0.9%.
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Hashrate%20Distribution%20(Phs).png) { _upload_ }
+
+_Image: Pool hashrate distribution._
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Daily_Hash_Dist.png) { _upload_ }
+
+_Image: Historical pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 234-244 DCR, with 30-day [average](https://dcrstats.com/) at 234.8 DCR (+3.3).
 
@@ -331,11 +343,25 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 Biggest gainers in December are vspd.bass.cf (+371), big.decred.energy (+179) and vspd.99split.com (+178).
 
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload_ }
+
+_Image: Distribution of tickets managed by VSPs._
+
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 79 dcrd nodes on Jan 1: v1.7.5 - 27%, v1.7.1 - 27%, v1.8.0 dev builds - 23%, v1.7.2 - 11%, v1.7.0 - 6%, v1.7.4 - 2.5%, other - 4%.
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Reachable%20Node%20Versions.png) { _upload_ }
+
+_Image: Reachable dcrd node versions._
+
+![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Daily_NodeDistribution.png) { _upload_ }
+
+_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.1-61.4%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 291-479K DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node we queried last month reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
+
+{ _maybe also tx volume chart_ }
 
 
 ## Ecosystem
