Rel Ext undo accidental Osmosis removal

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -280,8 +280,6 @@ Welcome the new first-time contributors:
 
 { _Check CMS, remove if none._ } Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
 
-{ _Welcome new corporate contractors with short intros._ }
-
 { _Status updates from existing contractors._ }
 
 { _Interviews with contributors. Link the interview and add a fun/strong quote._ }
@@ -544,6 +542,8 @@ In November, plans to outlaw privacy-enhancing crypto coins in the EU were [leak
 In Brazil, Congress has [passed](https://decrypt.co/116011/brazil-crypto-payments) a bill to regulate crypto payments, it will allow banks to offer services around crypto assets, and also covers things like airline points. 
 
 Sia launched a community grants program in September, and provided an [update](https://blog.sia.tech/grants-program-update-november-2022-83dd4a7e266e) in November. There is a small panel which reviews proposals and so far they have approved two proposals - Lume Web aims to "use Skynet to enable Sia to act as the internet",  is getting $80K, and Sia Satellite, which will allow people to pay to use Sia storage with a credit card, $26K. In December another [update](https://blog.sia.tech/grants-program-update-december-2022-f7be5f103d13) reported that Fabstir's proposal had been approved for $40K, and plans to collaborate with Lume Web on other aspects of the "web3 platform", like social media for the creator economy with sales and tipping. The other two proposals have been rejected, but with an option to edit and re-submit.
+
+The Osmosis DAO (Osmosis is a major DeFi platform on Cosmos) looked back on [2022](https://osmosis.zone/blog/osmosis-2022-retrospective). There were 278 [proposals](https://www.mintscan.io/osmosis/proposals), of which 26 were rejected, so 90% of proposals passed. One of the highlights appears to have been "superfluid staking" (otherwise known as "reverse liquid staking)", which allows liquidity providers to bond the tokens they get such that the underlying OSMO can be staked to contribute to securing the blockchain. Initially voting rights were delegated along with stake to the staker's choice of validator, but a successful governance [proposal](https://www.mintscan.io/osmosis/proposals/252) subsequently allowed LP stakers to override the votes of their chosen validator. Osmosis voters also [approved](https://www.mintscan.io/osmosis/proposals/186) a community grants proposal with a budget of 1.5M OSMO for 6 months and the entity running the program receiving $70K/month on top of an initial $100K - the program was [renewed](https://www.mintscan.io/osmosis/proposals/362) in November.
 
 ConsenSys faced a [backlash](https://www.coindesk.com/tech/2022/11/24/ethereum-software-firm-consensys-reveals-it-collects-user-data/) over an update to its privacy policy in November, with users objecting to the collection of IP address information through RPC provider Infura and linking this to addresses and account balances. A [response](https://uk.finance.yahoo.com/news/consensys-metamask-crypto-wallet-response-130000872.html) from ConsenSys in December clarified that they only collect data for "write" events (like making a transaction) and not when the user merely checks their balances, and that they have been doing this since 2018. They pledged to no longer store the IP data alongside the account access data, and to make it easier for users to change RPC provider through the interface.
 
