--- a/journal/202212.md
+++ b/journal/202212.md
@@ -272,13 +272,10 @@ Future plans for Bison Relay have been [announced](https://www.youtube.com/watch
 
 ## People
 
-{ _Discover and greet new first-time contributors. For devs, list people who got their first non-trivial commits merged in master branches. For writers, list authors who published notable Decred content for the first time. Sort by type (dev/writing/etc.), then alphabetically._ }
-
 Welcome the new first-time contributors:
 
+- { new BR dev? }
 - {@handle} ([{Project}]({ link to user's commits, DM profile, etc. }))
-
-{ _Check CMS, remove if none._ } Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
 
 { _Status updates from existing contractors._ }
 
