Eco expand VSP coverage

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -363,9 +363,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up 
 
 { _Check https://github.com/decred/dcrweb/commits/master for added/removed services._ }
 
-[The VSP 'vspd.synergy-crypto.net' no longer has live tickets and has been removed.](https://github.com/decred/dcrwebapi/pull/172)
-
-'vspd.synergy-crypto.net' had been listed since 10-June-2021 and had a total of 892 tickets vote. The fee was 0.75%.
+The VSP vspd.synergy-crypto.net no longer has live tickets and has been [removed](https://github.com/decred/dcrwebapi/pull/172) from the API. It had been serving since June 2021 and voted a total of 892 tickets. The shutdown was executed cleanly: it stopped accepting new tickets in August 2022 and over the next 4 months all live tickets had been voted.
 
 Binance withdrawal info/updates?
 
