Drop Discussions, move 1 tweet to BR ann

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -86,6 +86,7 @@ To understand the motivation to create Bison Relay check the posts by @jy-p:
 - [Outreach problems Decred faced](https://blog.decred.org/2022/12/02/What-is-wrong-with-Decred/) with existing outlets and social media platforms
 - Inherent [problems with today's Web](https://blog.decred.org/2022/12/09/Trapped-in-the-Web/)
 - Initial [Bison Relay announcement](https://blog.decred.org/2022/12/14/Bison-Relay-The-Sovereign-Internet/) explains the high level design of the system and why it was required to facilitate free speech and free association.
+- Twitter [announcement](https://twitter.com/behindtext/status/1603470873503141903)
 
 > The inference is that Decred should attempt to grow its network without conventional marketing. The path forward is not through, but around.
 
@@ -447,20 +448,6 @@ New Twitter Spaces recordings:
 **Non-English content:**
 
 - {}
-
-
-## Discussions
-
-{ _Hint: Interesting discussions that generated new ideas or perspectives._ }
-
-Selected Reddit posts:
-
-- {}
-
-Selected Twitter discussions:
-
-- { horrifying AI insight https://twitter.com/TheDAOQueen/status/1599321141239480320 }
-- [Bison Relay Announcement on Twitter](https://twitter.com/behindtext/status/1603470873503141903)
 
 
 ## Markets
