--- a/journal/202212.md
+++ b/journal/202212.md
@@ -412,7 +412,7 @@ Secured the following news articles:
 - [Embracing Degeneracy, Part 1 – Decred NFTs](https://www.decredmagazine.com/embracing-degeneracy-part-1-decred-nfts/) by @c12.
 - [The P2P World Wide Web](https://www.decredmagazine.com/the-p2p-world-wide-web-bison-relay/) by @PhoenixGreen
 - [Imagining the Future of Bison Relay](https://www.decredmagazine.com/imagining-the-future-of-bison-relay/) by @c12.
-- [What does dcrd do?](https://www.decredmagazine.com/what-does-dcrd-do/) by @PhoniexGreen and @zippycorners.
+- [What does dcrd do?](https://www.decredmagazine.com/what-does-dcrd-do/) by @PhoenixGreen and @zippycorners.
 - [Decred vs Bitcoin: From start to the end!](https://www.decredmagazine.com/decred-vs-bitcoin-from-start-to-the-end/) by @JoaoPaulo
 - [Breaking through the facade of social media delusion](https://www.decredmagazine.com/breaking-through-the-facade-of-social-media-delusion/) by @BlockchainJew
 - [Decred 2022 End of Year Summary](https://www.decredmagazine.com/decred-2022-end-of-year-summary/) by @DecredMagzine
@@ -423,7 +423,7 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [2022 the year of the bear - Decred and the state of the market](https://youtu.be/PO2byx7D8z0) feat. @PhoniexGreen @Exitus, and @Tivra.
+- [2022 the year of the bear - Decred and the state of the market](https://youtu.be/PO2byx7D8z0) feat. @PhoenixGreen @Exitus, and @Tivra.
 - [Decred and the Atomic Swap Revolution - DCRDEX Fundamentals](https://youtu.be/JyBoe1z5h9U) by @PhoenixGreen
 - [Setting up BisonRelay 0.1.1 on macOS](https://youtu.be/L4jm-VMPmBo) by @PhoenixGreen
 - [Bison Relay - First Look (version 0.1.1)](https://youtu.be/ukRkQC4IXoo) By @PhoenixGreen
