Media normalize URLs

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -423,19 +423,19 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [2022 the year of the bear - Decred and the state of the market](https://youtu.be/PO2byx7D8z0) feat. @phoenixgreen @Exitus, and @Tivra.
-- [Decred and the Atomic Swap Revolution - DCRDEX Fundamentals](https://youtu.be/JyBoe1z5h9U) by @phoenixgreen
-- [Setting up BisonRelay 0.1.1 on macOS](https://youtu.be/L4jm-VMPmBo) by @phoenixgreen
-- [Bison Relay - First Look (version 0.1.1)](https://youtu.be/ukRkQC4IXoo) By @phoenixgreen
+- [2022 the year of the bear - Decred and the state of the market](https://www.youtube.com/watch?v=PO2byx7D8z0) feat. @phoenixgreen @Exitus, and @Tivra.
+- [Decred and the Atomic Swap Revolution - DCRDEX Fundamentals](https://www.youtube.com/watch?v=JyBoe1z5h9U) by @phoenixgreen
+- [Setting up BisonRelay 0.1.1 on macOS](https://www.youtube.com/watch?v=L4jm-VMPmBo) by @phoenixgreen
+- [Bison Relay - First Look (version 0.1.1)](https://www.youtube.com/watch?v=ukRkQC4IXoo) By @phoenixgreen
 - [My Chat with Decred Founder/CEO Jake](https://www.youtube.com/watch?v=OS_AOyMdAeU) by Py Patel in Piece of the Py Show
-- [Decred News - Bison Relay P2P Chat + Social Media on Lightning is here! Big Dev updates!](https://youtu.be/K6Cu4Gi7Lp0) by @Exitus
+- [Decred News - Bison Relay P2P Chat + Social Media on Lightning is here! Big Dev updates!](https://www.youtube.com/watch?v=K6Cu4Gi7Lp0) by @Exitus
 
 **Audio:**
 
 New Twitter Spaces recordings:
 
 - [Bison Relay: The Sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel.
-- [Exploring Possibilities of Decentralized Social Media](https://twitter.com/i/spaces/1ypKddnRQZvKW?s=20) - by @Tivra and @kozel.
+- [Exploring Possibilities of Decentralized Social Media](https://twitter.com/i/spaces/1ypKddnRQZvKW) - by @Tivra and @kozel.
 
 **Art and fun:**
 
