Media add podcast/audio links
Alternatie audio location is nice, esp. for twitter.com

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -426,8 +426,8 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [2022 the year of the bear - Decred and the State of the Market](https://www.youtube.com/watch?v=PO2byx7D8z0) feat. @phoenixgreen @Exitus, and @Tivra
-- [Decred and the atomic swap revolution - DCRDEX Fundamentals](https://www.youtube.com/watch?v=JyBoe1z5h9U) by @phoenixgreen
+- [2022 the year of the bear - Decred and the State of the Market](https://www.youtube.com/watch?v=PO2byx7D8z0) feat. @phoenixgreen, @Exitus, and @Tivra (podcast [audio version](https://anchor.fm/decred-magazine/episodes/2022-the-year-of-the-bear---Decred-and-the-state-of-the-market-e1rnn2k))
+- [Decred and the atomic swap revolution - DCRDEX Fundamentals](https://www.youtube.com/watch?v=JyBoe1z5h9U) by @phoenixgreen (podcast [audio version](https://anchor.fm/decred-magazine/episodes/Decred-and-the-Atomic-Swap-Revolution---DCRDEX-Fundamentals-e1s85ne))
 - [Setting up BisonRelay 0.1.1 on macOS](https://www.youtube.com/watch?v=L4jm-VMPmBo) by @phoenixgreen
 - [Bison Relay - First look (version 0.1.1)](https://www.youtube.com/watch?v=ukRkQC4IXoo) By @phoenixgreen
 - [My chat with Decred founder/CEO Jake](https://www.youtube.com/watch?v=OS_AOyMdAeU) by Py Patel in Piece of the Py Show
@@ -437,8 +437,8 @@ Secured the following news articles:
 
 New Twitter Spaces recordings:
 
-- [Bison Relay: The sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel
-- [Exploring possibilities of decentralized social media](https://twitter.com/i/spaces/1ypKddnRQZvKW) - by @Tivra and @kozel
+- [Bison Relay: The sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel, featuring multiple community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Bison-Relay-The-Sovereign-Internet-e1sebd4))
+- [Exploring possibilities of decentralized social media](https://twitter.com/i/spaces/1ypKddnRQZvKW) - by @Tivra and @kozel feat. community members ([Anchor](https://anchor.fm/decred-magazine/episodes/Bison-Relay---Exploring-Possibilities-of-Decentralized-Social-Media---Decred-Twitter-Space-e1smab7))
 
 **Art and fun:**
 
