Media add translations

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -448,7 +448,7 @@ New Twitter Spaces recordings:
 
 **Translations:**
 
-- {}
+- Decred Journal September-November got a total of 4 new [translations](https://xaur.github.io/decred-news/) to Chinese (@Dominic) and Polish (@kozel). Thank you for spreading the word!
 
 **Non-English content:**
 
