Add BR impact on LN

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -16,7 +16,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - DCRDEX v0.5.8 release with new advanced options to speed up startup and shutdown.
 
-- Decred LN node count and capacity increased over Bison Relay launch.
+- Lightning Network node count and capacity increased significantly over Bison Relay launch.
 
 - 
 
@@ -347,7 +347,9 @@ _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.1-61.4%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 291-479K DCR.
 
-Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node we queried last month reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
+The launch of Bison Relay had a major impact on Decred LN. Comparing stats from @karamble's node observed on Dec 1 and Dec 19: nodes 67 -> 120, channels 104 -> 212, capacity 40.6 -> 91.1.
+
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up and has reported 130 nodes, 233 channels with a total capacity of 100.7 DCR, as of Jan 4. These stats vary depending on the LN node. For example, @karamble's node reported 144 nodes, 312 channels and 154 DCR capacity on Jan 4.
 
 { _maybe also tx volume chart_ }
 
