Media add DM stats

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -423,6 +423,18 @@ Secured the following news articles:
 - [Decred 2022 end of year summary](https://www.decredmagazine.com/decred-2022-end-of-year-summary/) by @phoenixgreen
 - [A learning from 2022](https://www.decredmagazine.com/ftx-a-learning-from-2022/) by @HassanMaishera
 
+[Decred Magazine](https://www.decredmagazine.com/) engagement stats as of December:
+
+- Total number of articles on DM: 371
+- Newsletter subscribers: 83
+- Total newsletters sent: 22
+- Active social media campaigns: 25
+- Completed social media campaigns: 27
+- Social media posts: 214
+- Likes: 1,040
+- Re-tweets: 169
+- Social media followers across all platforms and accounts: 1,090
+
 **Videos:**
 
 { _Scan https://www.youtube.com/results?search_query=decred&sp=CAI%253D ._ }
