Add note on ghost bans

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -291,6 +291,8 @@ Community stats as of Jan 4 (compared to Dec 2):
 - [Telegram](https://t.me/Decred) users: 2,872 (-22)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,640 (+0), views: 221K (+2K)
 
+Our main [@decredproject](https://twitter.com/decredproject) account has been [observed](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$ym0IL1s6fWqw9iu21vnMzVm1jmR0kdPm_4V3fKkV5Zs?via=decred.org&via=matrix.org&via=planetdecred.org) having 2 out of 4 bans activated: Ghost Ban and Reply Deboosting, according to [Twitter Shadowban Check](https://shadowban.jp/). Reportedly, not too long ago all 4 were active. This and other [reports](https://twitter.com/behindtext/status/1610663633498869760) somewhat explain Twitter performance seen so far.
+
 
 ## Governance
 
